# Echo-Modelling-and-Baking

./: .gitignore  README.md  SUMMARY.md
Acoustic Modeler/: Acoustic Modeler.vcxproj  Acoustic Modeler.vcxproj.filters  AcousticsGenerator.cpp  AcousticsGenerator.h  Edge.h  Node.cpp  Node.h  Room.cpp  Room.h  RoomComponents.h  Surface.cpp  Surface.h  WorldSpace.cpp  WorldSpace.h
Acoustic Modeler/Debug/: Acoustic Modeler.exe.recipe  vc142.idb
Acoustic Modeler/Debug/Acoustic Modeler.tlog/: Acoustic Modeler.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Acoustic Modeler/x64/Debug/: Acoustic Modeler.exe.recipe  Acoustic Modeler.ilk  vc142.idb
Acoustic Modeler/x64/Debug/Acoustic Modeler.tlog/: Acoustic Modeler.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AcousticModel-Tests/: AcousticModel-Tests.vcxproj
AcousticModel-Tests/Debug/: AcousticModel-Tests.exe.recipe  AcousticModel-Tests.vcxproj.FileListAbsolute.txt
AcousticModel-Tests/Debug/Acoustic.9174ff45.tlog/: AcousticModel-Tests.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
AcousticModel-Tests/x64/Debug/: AcousticModel-Tests.exe.recipe  AcousticModel-Tests.vcxproj.FileListAbsolute.txt
AcousticModel-Tests/x64/Debug/Acoustic.9174ff45.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DEPRECATED/Acoustic Modeler/: Acoustic Modeler.vcxproj  Acoustic Modeler.vcxproj.filters
DEPRECATED/Echo/: Echo.cpp  Echo.h
DEPRECATED/Reverb Baker/: Reverb Baker.vcxproj
Echo/: Echo.cpp  Echo.h  Echo.sln  Echo.vcxproj  Echo.vcxproj.filters
Echo Project/: CMakeLists.txt  CMakeSettings.json  Echo Project.cpp  Echo Project.h
Echo Project/src/Echo/AcousticsGenerator/: AcousticsGenerator.cpp  CMakeLists.txt
Echo Project/src/Echo/AudioObjectIO/: AudioObjectIO.cpp  CMakeLists.txt
Echo Project/src/Echo/ReflectionsProcessor/: CMakeLists.txt  ReflectionsProcessor.cpp
Echo Project/src/Echo/ReverbBaker/: CMakeLists.txt  ReverbBaker.cpp
Echo Project/src/Echo/Simulator/: CMakeLists.txt  Simulator.cpp
Echo Project/src/Echo/WorldGenerator/: CMakeLists.txt  WorldGenerator.cpp
Echo Project/src/Libraries/Acoustics/: Acoustics Description.txt  AcousticsHeader.h  CMakeLists.txt
Echo Project/src/Libraries/Audio/: CMakeLists.txt
Echo Project/src/Libraries/Audio/3DAO/: 3DAO Description.txt
Echo Project/src/Libraries/Audio/APU/: APU Description.txt
Echo Project/src/Libraries/Audio/FXPU/: FXPU Description.txt
Echo Project/src/Libraries/Common/: CMakeLists.txt  Common Description.txt  Common.h  TestingGround.cpp
Echo Project/src/Libraries/Common/DataProcessing/: DataProcessing Description.txt
Echo Project/src/Libraries/Common/Profiler/: Profiler.txt
Echo Project/src/Libraries/Common/put_boost_here/: put_boost_here.txt
Echo Project/src/Libraries/EchoReflections/: CMakeLists.txt
Echo Project/src/Libraries/EchoReverb/: CMakeLists.txt  Reverb Description.txt
Echo Project/src/Libraries/Math/: CMakeLists.txt  Math Description.txt
Echo Project/src/Libraries/World Space/: CMakeLists.txt  Edge.h  Node.h  Room.h  World Space Description.txt  World.cpp  World.h  WorldObject.h
Echo Project/src/Libraries/WorldSpace/: CMakeLists.txt  Room.h  World Space Description.txt  World.cpp  World.h  WorldObject.h  WorldSpaceHeader.h
Echo/Debug/: AcousticModel-Tests.ilk  Echo.exe.recipe  Echo.ilk  Echo.vcxproj.FileListAbsolute.txt  vc142.idb
Echo/Debug/Echo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Echo/x64/Debug/: AcousticModel-Tests.ilk  Echo.exe.recipe  Echo.ilk  Echo.vcxproj.FileListAbsolute.txt  vc142.idb
Echo/x64/Debug/Echo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Low Level Audio Libraries/IEMPluginSuite/MultiBandCompressor/Source/: FilterBankVisualizer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Low Level Audio Libraries/IEMPluginSuite/resources/customComponents/: CompressorVisualizer.h  OnOffButton.h
Project Reconstruction Test/EchoTest/: CMakeLists.txt
Project Reconstruction Test/EchoTest/src/AcousticModeler/: AcousticModeler.cpp  AcousticModeler.h  CMakeLists.txt
Project Reconstruction Test/EchoTest/src/Echo/: CMakeLists.txt  Echo.cpp  Echo.h
Project Reconstruction Test/EchoTest/src/Tests/: AcousticModeler.cpp
Project Reconstruction Test/EchoTest/src/WorldSpaceGenerator/: CMakeLists.txt
Reverb Baker/Debug/: Reverb Baker.exe.recipe
Reverb Baker/x64/Debug/: Reverb Baker.exe.recipe
TestDLL/: TestDLL.vcxproj
documentation/: classes-list.md  world-space.md
eir-air/: analog-impulse-response-model.md  echo-impulse-response.md
general-documentation/: abstract.md  project-reports.md  setup-guide.md
project/: project-descrption.md  unreal-engine-project.md
research/: 3-dimensional-acoustics.md  3-dimensional-audio-algorithms-and-calculations.md  applying-3d-audio-to-virtual-reality.md  audio-and-virtual-reality.md  reflection-raytracing-and-3-dimensional-audio.md  spatial-acoustics.md
reverb-baking/: baked-at-build-profile.md  dynamic-object-runtime-profile.md  eir-convolution-bake.md  static-object-bake-profile.md  traditional-convolution-bake.md
