# CMakeList.txt : CMake project for Echo Project, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Math")

# Add source to this project's executable.
#add_library (Math STATIC "Echo Project.cpp" "Echo Project.h")


# TODO: Add tests and install targets if needed.
