# CMakeList.txt : CMake project for EchoTest, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("EchoTest")

# Add source to this project's executable.
add_executable (EchoTest "EchoTest.cpp" "EchoTest.h")

# TODO: Add tests and install targets if needed.
